fix small gist causing a big gap in vertical layout

--- a/app/quiz/reference/reference.module.css
+++ b/app/quiz/reference/reference.module.css
@@ -77,4 +77,8 @@
         gap: 16px;
         align-items: stretch;
     }
+
+    .reference > :first-child > :first-child {
+        flex: 0;
+    }
 }
